--- a/unite_ui/src/app/home/home.component.html
+++ b/unite_ui/src/app/home/home.component.html
@@ -1,32 +1,45 @@
 <section class="hero-section">
   <div class="hero-content">
-    <h1>Welcome to Unity</h1>
-    <h2>Making Good Count</h2>
-    <p class="hero-subtitle">The Rewards System for Life</p>
-    <p>Do good, get rewarded. Whether you're attending events in your community or just doing your part to make the world a better place, Unity rewards you for your efforts.</p>
-    <button class="btn btn-primary btn-large" routerLink="/signup">Get Started</button>
+    <!-- headline -->
+    <h1>Bienvenue à Unité</h1>
+    <!-- subheadline -->
+    <h2>Faire le bien compte</h2>
+    <p class="hero-subtitle">Le Système De Récompenses Pour La Vie</p>
+    <p>
+      Faites le bien, soyez récompensé.
+       Que vous participiez à des événements dans votre communauté ou que vous contribuiez simplement à rendre le monde meilleur, 
+       Unité récompense vos efforts.
+    </p>
+    <!-- // call to action -->
+    <button class="btn btn-primary btn-large" routerLink="/signup">Commencez</button>
   </div>
   <div class="hero-image">
     <img src="../../assets/unity.jpg" alt="Rewards Image">
   </div>
 </section>
 <section class="benefits-section">
-  <h2>Why Use Unity?</h2>
+  <h2>Pourquoi utiliser Unité?</h2>
   <div class="benefits-container">
     <div class="benefits-item">
       <img src="../../assets/together.jpg" alt="Community Icon">
-      <h3>Connect with Your Community</h3>
-      <p>Find events in your area and connect with other like-minded individuals who care about making a difference.</p>
+      <h3>Connectez-vous avec votre communauté:</h3>
+      <p>
+        Find events in your area and connect with other like-minded individuals who care about making a difference.
+      </p>
     </div>
     <div class="benefits-item">
       <img src="../../assets/kindness.png" alt="Rewards Icon">
-      <h3>Earn Rewards</h3>
-      <p>Get rewarded for your good deeds with Unity points, which can be redeemed for cool stuff.</p>
+      <h3>Gagnez des récompenses</h3>
+      <p>
+        Soyez récompensé pour vos bonnes actions avec des points Unité, qui peuvent être échangés contre des articles sympas.
+      </p>
     </div>
     <div class="benefits-item">
       <img src="../../assets/green-light.jpg" alt="Status Icon">
-      <h3>Progress Through the Ranks</h3>
-      <p>Start at entry level and work your way up through the ranks, earning even more rewards as you go.</p>
+      <h3>Progressez dans les rangs</h3>
+      <p>
+        Débutez au niveau novice et atteignez de nouveaux sommets pour gagner plus de récompenses
+      </p>
     </div>
   </div>
 </section>
